modificacion dockerfile y nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,6 @@
-# redirección automática de HTTP a HTTPS
 server {
   listen 80;
-  server_name robotitosautomaticos.com www.robotitosautomaticos.com;
-  return 301 https://$host$request_uri;
-}
-
-# configuración HTTPS (Let’s Encrypt generará el certificado)
-server {
-  listen 443 ssl;
-  server_name robotitosautomaticos.com www.robotitosautomaticos.com;
-
-  ssl_certificate /etc/letsencrypt/live/robotitosautomaticos.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/robotitosautomaticos.com/privkey.pem;
-
+  server_name _;  # o tu dominio si querés
   root /usr/share/nginx/html;
   index index.html;
 
